2012-09-17  Carl Hetherington  <cth@carlh.net>

	* Include servomatic in the Windows install.

2012-09-17  Carl Hetherington  <cth@carlh.net>

	* Version 0.49 released.

2012-09-16  Carl Hetherington  <cth@carlh.net>

	* Version 0.48 released.

2012-09-15  Carl Hetherington  <cth@carlh.net>

	* Slightly speculative fix for failure to
	take note of audio gain changes caused by
	the Calculate dialogue.

2012-09-12  Carl Hetherington  <cth@carlh.net>

	* Fix crash when FFmpeg doesn't set up the audio channel
	layout for some reason.

2012-09-01  Carl Hetherington  <cth@carlh.net>

	* Add 1.66-within-flat format.

2012-08-27  Carl Hetherington  <cth@carlh.net>

	* Version 0.47 released.

2012-08-23  Carl Hetherington  <cth@carlh.net>

	* Add some more formats.

	* Update to use libdcp 0.11.

	* Fix build with boost filesystem version 2.

2012-08-10  Carl Hetherington  <cth@carlh.net>

	* Version 0.46 released.

2012-08-10  Carl Hetherington  <cth@carlh.net>

	* Untested fixes for failure to encode
	content without audio.

2012-08-09  Carl Hetherington  <cth@carlh.net>

	* Version 0.45 released.

2012-08-09  Carl Hetherington  <cth@carlh.net>

	* Fix bug with padding in Scope causing corrupt
	images.

	* Fix bug when using content file names which
	start with the name of the film directory.

2012-08-05  Carl Hetherington  <cth@carlh.net>

	* Version 0.44 released.

2012-08-04  Carl Hetherington  <cth@carlh.net>

	* Fix bug with content inside the film directory.

2012-08-04  Carl Hetherington  <cth@carlh.net>

	* Version 0.43 released.

2012-08-04  Carl Hetherington  <cth@carlh.net>

	* Use wxwidgets .rc file to make Windows version
	look nicer.

	* Hopefully improve building against different
	versions of FFmpeg.

2012-08-04  Carl Hetherington  <cth@carlh.net>

	* Version 0.42 released.

2012-08-04  Carl Hetherington  <cth@carlh.net>

	* Request admin priviledges on install for Windows 7.

	* Add some missing dependencies to the Windows package.
