@@ -2,6 +2,10 @@
 
 	* Include servomatic in the Windows install.
 
+	* Add a simple Properties dialog to give
+	an estimate of disk space required for an
+	encode.
+
 2012-09-17  Carl Hetherington  <cth@carlh.net>
 
 	* Version 0.49 released.
